--- a/my-website/src/css/custom.css
+++ b/my-website/src/css/custom.css
@@ -6,15 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-color-primary: #ff1493;
+  --ifm-color-primary-dark: #f80086;
+  --ifm-color-primary-darker: #ea007e;
+  --ifm-color-primary-darkest: #c10068;
+  --ifm-color-primary-light: #ff30a0;
+  --ifm-color-primary-lighter: #ff3da6;
+  --ifm-color-primary-lightest: #ff66b9;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
